<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:layout_gravity="center_horizontal"
    android:layout_marginHorizontal="24dp"
    android:layout_marginVertical="12dp"
    android:background="@drawable/item_bg">
    <ImageView
        android:id="@+id/ivIcInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:src="@drawable/ic_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/sf_pro_display"
        android:text="@string/portfolio_appraisal"
        android:textColor="#66000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/tvPortfolioAppraisal"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvPortfolioAppraisal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/sf_pro_display"
        android:text="145,309.39 $"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />


    <LinearLayout
        android:id="@+id/llPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPortfolioAppraisal">

        <TextView
            android:id="@+id/tvPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display"
            android:text="78.16%"
            tools:text="78.16%"
            android:textColor="#38D39F"
            android:textSize="16sp"
            android:textStyle="bold"

            />

        <ImageView
            android:id="@+id/ivUpRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:src="@drawable/ic_up_right" />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:layout_marginHorizontal="16dp"
        android:max="100"
        android:progress="20"
        android:progressDrawable="@drawable/progress_bar"
        app:layout_constraintBottom_toTopOf="@id/flBalance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llPercent" />

    <FrameLayout
        android:id="@+id/flBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="start">
            <ImageView
                android:id="@+id/ivCircleBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_circle_blue"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display"
                android:text="@string/in_share"
                android:textColor="#66000000"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/tvInShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display"
                android:text="76,616.42 $"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/ivCircleGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_circle_green"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display"
                android:text="@string/balance_of_USD"
                android:textColor="#66000000"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/tvBalanceOfUSD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display"
                android:text="68,692.72 $"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="end"
            >
            <ImageView
                android:id="@+id/ivCircleYellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_circle_yellow"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display"
                android:text="@string/balance_of_RUB"
                android:textColor="#66000000"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/tvBalanceOfRUB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display"
                android:text="0.0 ₽"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>