<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:layout_gravity="center_horizontal"
    android:layout_marginHorizontal="24dp"
    android:layout_marginVertical="12dp"
    android:background="@drawable/item_bg"
    android:backgroundTint="#F6C5EF">

    <ImageView
        android:id="@+id/ivIcInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:src="@drawable/ic_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <FrameLayout
        android:clickable="true"
        android:id="@+id/btRUB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tvExpectedBonus"
        app:layout_constraintStart_toEndOf="@id/tvExpectedBonus"
        android:layout_marginStart="10dp"
        android:focusable="true">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_rub"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_rub1"
            android:layout_gravity="center"/>
    </FrameLayout>

    <FrameLayout
        android:clickable="true"
        android:id="@+id/btUSD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/btRUB"
        app:layout_constraintTop_toTopOf="@+id/btRUB"
        android:layout_marginStart="5dp"
        android:focusable="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_usd" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_usd1" />
    </FrameLayout>

    <ImageView
        android:id="@+id/ivIcAddPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:src="@drawable/ic_add_people"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/sf_pro_display"
        android:text="@string/expected_bonus"
        android:textColor="#66000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/tvExpectedBonus"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvExpectedBonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/sf_pro_display"
        android:text="145,309.39"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/sf_pro_display"
        android:layout_marginBottom="5dp"
        android:text="@string/in_team"
        android:textColor="#66000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/iv_team"
        app:layout_constraintStart_toStartOf="parent"
        />
    <FrameLayout
        android:id="@+id/iv_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55"
        android:layout_marginStart="16dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_circle_team"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_team"
            android:layout_gravity="center"
            />
    </FrameLayout>

    <TextView
        android:id="@+id/tvInTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/sf_pro_display"
        android:text="450"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_team"
        app:layout_constraintStart_toEndOf="@id/iv_team"
        app:layout_constraintTop_toTopOf="@+id/iv_team"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="start">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display"
                android:text="@string/replenished_RUB"
                android:textColor="#66000000"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/tvReplenishedRUB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display"
                android:text="76,616.42 ₽"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="end"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display"
                android:text="@string/withdrawn_RUB"
                android:textColor="#66000000"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/tvWithdrawnRUB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display"
                android:text="0.0 ₽"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>